= Asciidoctor Tabs Changelog
:url-repo: https://github.com/asciidoctor/asciidoctor-tabs

This document provides a curated view of the changes to Asciidoctor Tabs per release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== 1.0.0-alpha.11 (2022-12-08) - @mojavelinux

=== Changed

* *BREAKING CHANGE:* Align terminology with ARIA / Open UI recommendations for a tabs component; requires change to custom CSS (#38)
 ** `.tabset` becomes `.tabs`
 ** `.tabs` becomes `.tablist`
 ** `.tab-panel` becomes `.tabpanel`
 ** `.is-active` for selected tab becomes `.is-selected`
 ** `.is-active` for visible panel becomes `:not(.is-hidden)`
* Assign ARIA attributes in JavaScript (i.e., role, aria-controls, aria-selected, hidden) where recommended (#38)
* *BREAKING CHANGE:* Convert tabs block to openblock instead of passthrough block (#15)
 ** `openblock` class added to `.tabs`
 ** `.tablist` becomes child of `.content`
 ** `.tabpanel` elements become siblings of `.tablist`

=== Fixed

* Clear margin on .tablist.ulist and child ul

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.11[git tag] | {url-repo}/compare/v1.0.0-alpha.10\...v1.0.0-alpha.11[full diff]

== 1.0.0-alpha.10 (2022-12-08) - @mojavelinux

=== Fixed

* Remove overflow styles on tab pane as it's not universal
* Make a best effort to constrain the width of an overflowing table

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.10[git tag] | {url-repo}/compare/v1.0.0-alpha.9\...v1.0.0-alpha.10[full diff]

== 1.0.0-alpha.9 (2022-12-07) - @mojavelinux

=== Changed

* Assign `tab` role to each item in tab list
* Apply border and padding to tab pane element instead of its parent
* Remove fixed height on tab element; using padding instead
* Use more subtle color scheme for border and background colors on tabs

=== Fixed

* Configure overflow content in tab panel to scroll horizontally
* Set background on tabs properly so background does not bleed through

=== Details